completed some firebase coding in javascript

--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
                   <form>
                       <div class="form-group">
                         <label for="formGroupExampleInput"><strong>TRAIN NAME</strong></label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="(name)">
+                        <input type="text" class="form-control" id="trainNameInput" placeholder="(name)">
                       </div>
                       <div class="form-group">
                         <label for="formGroupExampleInput2"><strong>DESTINATION</strong></label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="(destination)">
+                        <input type="text" class="form-control" id="destinationInput" placeholder="(destination)">
                       </div>
                       <div class="form-group">
                           <label for="formGroupExampleInput3"><strong>FIRST TRAIN TIME (HH:MM - MILITARY TIME)</strong></label>
-                          <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="(time)">
+                          <input type="text" class="form-control" id="trainTimeInput" placeholder="(time)">
                         </div>
                         <div class="form-group">
                             <label for="formGroupExampleInput4"><strong>FREQUENCY (MIN)</strong></label>
-                            <input type="text" class="form-control" id="formGroupExampleInput4" placeholder="(frequency)">
+                            <input type="text" class="form-control" id="frequencyInput" placeholder="(frequency)">
                           </div>
                           <br>
                     </form>
-                    <button type="button" class="btn btn-primary btn-lg">Submit</button>
+                    <button type="button" class="btn btn-primary btn-lg" id="submitBtn">Submit</button>
                     <br>
                     <br>
                     <br>
