--- a/index.html
+++ b/index.html
@@ -1,80 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
-<link rel="stylesheet" href="assets/style.css">
-<title>Train Schedule</title>
-<script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
-<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
+  <link rel="stylesheet" href="assets/style.css">
+  <title>Train Schedule</title>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 
 <body>
   <div id="container">
-        <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                  <h1 class="display-4">Train Schedule</h1>
-                  <p class="lead">"I Choo-Choo Choose You"</p>
-                </div>
-              </div>
-
-              <div class="alert alert-primary" role="alert" >
-                    <marquee behavior="scroll" direction="left" scrollamount="8">Current Train Schedule</marquee>
-
-              <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">TRAIN NAME</th>
-                        <th scope="col">DESTINATION</th>
-                        <th scope="col">FREQUENCY (MINS)</th>
-                        <th scope="col">NEXT ARRIVAL</th>
-                        <th scope="col">MINUTES AWAY</th>
-                        </tr>
-                    </thead>
-                    <tbody id="new-train"></tbody>
-                  </table>
-                  </div>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Train Schedule</h1>
+        <p class="lead"></p>
+      </div>
     </div>
-<br>
-<br>
-                  <div class="alert alert-primary" role="alert" >
-                      <marquee behavior="scroll" direction="left" scrollamount="8">Add a Train</marquee>
 
-                  <form>
-                      <div class="form-group">
-                        <label for="trainNameInput"><strong>TRAIN NAME</strong></label>
-                        <input type="text" class="form-control" id="trainNameInput" placeholder="(name)">
-                      </div>
-                      <div class="form-group">
-                        <label for="destinationInput"><strong>DESTINATION</strong></label>
-                        <input type="text" class="form-control" id="destinationInput" placeholder="(destination)">
-                      </div>
-                      <div class="form-group">
-                          <label for="trainTimeInput"><strong>FIRST TRAIN TIME (HH:MM - MILITARY TIME)</strong></label>
-                          <input type="text" class="form-control" id="trainTimeInput" placeholder="(time)">
-                        </div>
-                        <div class="form-group">
-                            <label for="frequencyInput"><strong>FREQUENCY (MIN)</strong></label>
-                            <input type="number" class="form-control" id="frequencyInput" placeholder="(frequency)">
-                          </div>
-                          <br>
-                        <button id="submitBtn" type="submit" class="btn btn-primary btn-lg" >Submit</button>
-                    </form>
-                  </div>
-                    <br>
-                    <br>
-                    <br>
+    <div class="alert alert-primary" role="alert">
+      <marquee behavior="scroll" direction="left" scrollamount="8">Current Train Schedule</marquee>
+
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">TRAIN NAME</th>
+            <th scope="col">DESTINATION</th>
+            <th scope="col">FREQUENCY (MINS)</th>
+            <th scope="col">NEXT ARRIVAL</th>
+            <th scope="col">MINUTES AWAY</th>
+          </tr>
+        </thead>
+        <tbody id="new-train"></tbody>
+      </table>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="alert alert-primary" role="alert">
+    <marquee behavior="scroll" direction="left" scrollamount="8">Add a Train</marquee>
+
+    <form id="myForm">
+      <div class="form-group">
+        <label for="trainNameInput"><strong>TRAIN NAME</strong></label>
+        <input type="text" class="form-control" id="trainNameInput" placeholder="(name)">
+      </div>
+      <div class="form-group">
+        <label for="destinationInput"><strong>DESTINATION</strong></label>
+        <input type="text" class="form-control" id="destinationInput" placeholder="(destination)">
+      </div>
+      <div class="form-group">
+        <label for="trainTimeInput"><strong>FIRST TRAIN TIME (HH:MM - MILITARY TIME)</strong></label>
+        <input type="text" class="form-control" id="trainTimeInput" placeholder="(time)">
+      </div>
+      <div class="form-group">
+        <label for="frequencyInput"><strong>FREQUENCY (MIN)</strong></label>
+        <input type="number" class="form-control" id="frequencyInput" placeholder="(frequency)">
+      </div>
+      <br>
+      <button id="submitBtn" type="button" class="btn btn-primary btn-lg">Submit</button>
+    </form>
+  </div>
+  <br>
+  <br>
+  <br>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="assets/logic.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="assets/logic.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
